nginx-nonsecure.yaml
# Minimal sample deployment of unprivileged nginx
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: nginx
    app.kubernetes.io/managed-by: Kustomize
    app.kubernetes.io/name: nginx
    app.kubernetes.io/version: 1.21.6
  name: nginx
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: nginx
    app.kubernetes.io/name: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: nginx
    app.kubernetes.io/managed-by: Kustomize
    app.kubernetes.io/name: nginx
    app.kubernetes.io/version: 1.21.6
  name: nginx
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: nginx
      app.kubernetes.io/name: nginx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: nginx
        app.kubernetes.io/managed-by: Kustomize
        app.kubernetes.io/name: nginx
        app.kubernetes.io/version: 1.21.6
        sidecar.istio.io/inject: "true"
        netic.dk/network-ingress: istio
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:latest
        name: nginx
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
